Create tests for worker-02 in test suite (#16)
* Create tests for worker-02 in test suite

* fix imports

* fix imports